--- a/src/Components/LoginModal/LoginModal.module.css
+++ b/src/Components/LoginModal/LoginModal.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     background-color:  #808080ad;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left:0;
     display: flex;
