--- a/src/Components/RegisterModal/RegisterModal.module.css
+++ b/src/Components/RegisterModal/RegisterModal.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     background-color:  #808080ad;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left:0;
     display: flex;
@@ -14,7 +14,7 @@
     position: relative;
     background-color:white;
     width: 645px;
-    height: 94vh; 
+    height: 568px;
     display: flex;
     flex-direction: row;
 }
