--- a/src/Components/RegisterModal/Components/RegisterForm/RegisterForm.module.css
+++ b/src/Components/RegisterModal/Components/RegisterForm/RegisterForm.module.css
@@ -3,6 +3,7 @@
     border-radius: 6px;
     border: 1px grey solid;
     margin-right: 17px;
+    margin-top: 16px;
 }
 
 .inputStyle {
@@ -28,4 +29,8 @@
     font-family: 'Inter', sans-serif;
     font-size: 12px;
     color: red;
+}
+
+.nameContainer {
+    display: flex;
 }
