--- a/src/Components/PasswordModal/PasswordModal.module.css
+++ b/src/Components/PasswordModal/PasswordModal.module.css
@@ -14,7 +14,7 @@
     position: relative;
     background-color:white;
     width: 449px;
-    height: 60vh;
+    height: 349px;
     display: flex;
     flex-direction: row;
 }
@@ -76,4 +76,12 @@
     font-size: 12px;
     margin: 0px;
     font-weight: bold;
+}
+
+.invalid{
+    margin-top: 3px;
+    margin-bottom: 0px;
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
+    color: red;
 }
